# CppNewProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake-scripts/: sanitizers.cmake
include/: hello_world.hpp
src/: CMakeLists.txt  hello_world.cpp
tests/: CMakeLists.txt  first_test.cpp
